# perovskite-pce-ml-thesis

./: .gitignore  CITATION.cff  DATA_CARD.md  LICENSE  MODEL_CARD.md  Makefile  README.md  RESULTS.md  aday_uyumluluk_filtresi.py  config.yaml  doi_grup_dogrulama_v2.py  doi_normalizasyon_duyarlilik.py  htl_free_yayin_ici.py  kontamine_test_maesi.py  pce30_ustu_stack_incelemesi.py  pyproject.toml  requirements-lock.txt  requirements.txt  run_all.py
.github/workflows/: ci.yml
outputs/: README.md
outputs/ablation/: descriptor_ablation.json
outputs/candidates_full/: candidate_prediction_summary.csv  candidate_predictions.csv  candidates_compat_N5.csv  metadata.json  (+4 more)
reports/: README.md
scripts/: 01_prepare_data.py  02_build_features.py  03_compare_models.py  04_validation_experiments.py  05_shap_analysis.py  06_generate_candidates.py  07_screening_utility.py  08_hyperparameter_tuning.py  09_descriptor_ablation.py  10_conformal_uncertainty.py  11_pce_outlier_audit.py  12_catboost_tuning.py  13_preprocessing_and_bandgap.py  14_pipeline_cv.py  15_ek_denetimler.py  thesis_data_analysis.py  thesis_figures.py
src/: 01_v1_basic_ml_models.py  02_v2_group_safe_models.py  03_v3_leakage_safe_models.py  04_v4_model_comparison_report.py  05_v5_shap_analysis.py  06_v6_candidate_generation.py  common.py
tests/: test_candidate_encoding.py  test_candidates.py  test_clean_data.py  test_composition.py  test_descriptors.py  test_feature_builder.py  test_features.py  test_outputs_consistency.py  test_schema.py  test_smoke_pipeline.py  test_splits.py
thesis/: README.md
(+65 files in other folders)
